--- a/myapp/template/index.html
+++ b/myapp/template/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Test Page</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt possimus molestias deserunt laudantium ratione dolores, perspiciatis id. Dolore sunt suscipit obcaecati rem. Iste quaerat amet ut distinctio reprehenderit laboriosam doloremque.</p>
 </body>
 </html>
