--- a/myapp/template/index.html
+++ b/myapp/template/index.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Test Page</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt possimus molestias deserunt laudantium ratione dolores, perspiciatis id. Dolore sunt suscipit obcaecati rem. Iste quaerat amet ut distinctio reprehenderit laboriosam doloremque.</p>
+
+	<p>Test code</p>
+
 </body>
 </html>
