--- a/myapp/template/table.html
+++ b/myapp/template/table.html
@@ -6,6 +6,35 @@
     <title>Document</title>
 </head>
 <body>
-    testpage
+    Created a testpage for Table <br>
+    <br>
+        <!-- this table is for entering marks of students-->
+    <table border="1" align="left" bordercolor = "green" width = "30%" cellspacing = "5" cellpadding = "20">
+    <tr>
+            <th colspan ="3">Abu Dhabi Indian School</th>
+    </tr>
+    <tr>
+        <th>Students</th>
+        <th>Marks</th>
+        <th>Gender</th>
+    </tr>
+    <tr>
+        <td>Milin</td>
+        <td>48</td>
+        <td>Female</td>
+    </tr>
+    <tr>
+          <td>Thanmaya</td>
+          <td>45</td>
+          <td>Female</td>
+    </tr>
+</table><br>
+<br>
+    <ol type ="i">
+        <li>Good= Above 40 Marks</li>
+        <li>Average = 30 to 40 Marks</li>
+        <li>Bad = Less than 20 Marks</li>
+    </ol>
+
 </body>
 </html>
