--- a/myapp/template/table.html
+++ b/myapp/template/table.html
@@ -9,7 +9,7 @@
     Created a testpage for Table <br>
     <br>
         <!-- this table is for entering marks of students-->
-    <table border="1" align="left" bordercolor = "green" width = "30%" cellspacing = "5" cellpadding = "20">
+    <table border="1" bordercolor = "green" width = "30%" cellspacing = "5" cellpadding = "20">
     <tr>
             <th colspan ="3">Abu Dhabi Indian School</th>
     </tr>
@@ -28,7 +28,7 @@
           <td>45</td>
           <td>Female</td>
     </tr>
-</table><br>
+</table>
 <br>
     <ol type ="i">
         <li>Good= Above 40 Marks</li>
