--- a/myapp/template/index.html
+++ b/myapp/template/index.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
+{% load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Test Page</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt possimus molestias deserunt laudantium ratione dolores, perspiciatis id. Dolore sunt suscipit obcaecati rem. Iste quaerat amet ut distinctio reprehenderit laboriosam doloremque.</p>
-
-	<p>Test code</p>
-
+    <p id="id1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt possimus molestias deserunt laudantium ratione dolores, perspiciatis id. Dolore sunt suscipit obcaecati rem. Iste quaerat amet ut distinctio reprehenderit laboriosam doloremque.</p>
+    <b>
+        <img src="{% static 'images/edf.png' %}" alt="" srcset="">
+    </b>
+    <p class="class1">
+        My CSS class 
+    </p><b>
+    </b>
+    <div>
+        <p>Test code</p>
+    </div>
 </body>
 </html>
